funciona por favor

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
  body {
      padding-top: 40px;
      padding-bottom: 40px;
-     background-color: #ADABAB;
+     background-color: #9fa088;
      }
 
      .form-signin {
