--- a/alternativa/galeria/style.css
+++ b/alternativa/galeria/style.css
@@ -1,10 +1,6 @@
-
-
 .container {
     display: flex;
-    /*flex-wrap: wrap;*/
-    flex-flow: row wrap;
-    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 
@@ -17,11 +13,11 @@ article {
     display: flex;
     flex-direction: column;
     border: 1px #363636 solid;
-    border-radius: 2px;
+    border-radius: 25px;
     margin: 8px;
     /*             height: 100%;
-
-    width: 20%; */
+ */
+    width: 20%;
 }
 
 article>* {
@@ -33,14 +29,15 @@ article>h2 {
     width: 50%;
     text-align: center;
     margin: 10px 0px;
-               
+    /*             font-size: 1em;
  }
 
 
 
-article>img {
-       width: 100%;
- 
+img {
+    border-radius: 25px 25px 0px 0px;
+    /*     width: 100%;
+ */
 }
 
 img:hover {
