--- a/css/musica.css
+++ b/css/musica.css
@@ -1,10 +1,14 @@
 
-
+body{
+    background-color: #e5e5f7;
+background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e5f7 10px ), repeating-linear-gradient( #c4c3bf55, #c4c3bf );
+}
 .container {
     display: flex;
     /*flex-wrap: wrap;*/
     flex-flow: row wrap;
     justify-content: space-around;
+    padding: 5%;
 }
 
 
@@ -16,9 +20,14 @@
 article {
     display: flex;
     flex-direction: column;
+    align-self: flex-end;
     border: 1px #363636 solid;
-    border-radius: 2px;
-    margin: 8px;
+    border-radius: 15px;
+    padding: 8px;
+    margin: 10px;
+    background-color: #363636;
+    webkit-box-shadow: 5px 5px 6px 0px rgba(0,0,0,0.64); 
+    box-shadow: 5px 5px 6px 0px rgba(0,0,0,0.64);
     /*height: 100%;
 
     width: 20%; */
@@ -26,12 +35,14 @@ article {
 
 article>* {
     align-self: center;
+    
     text-transform: uppercase;
+
 }
 
 article>h2 {
-    width: 50%;
     text-align: center;
+    color: #fff;
     margin: 10px 0px;
                
  }
@@ -39,9 +50,14 @@ article>h2 {
 
 
 article>img {
-       width: 100%;
+       height: 300px;
+       border-radius: 5px;
  
 }
+article>audio {
+    align-self: flex-end;
+}
+
 
 img:hover {
     /* filter: url(filters.svg#grayscale); Firefox 3.5+ */
@@ -65,4 +81,8 @@ button {
 
 button:hover {
     background-color: #1f1f1f;
+}
+.premium{
+    font-size: 80px;
+    text-align: center;
 }
