INDEX Y LOGIN TURKO

--- a/alternativa/login.css
+++ b/alternativa/login.css
@@ -1,7 +1,7 @@
 body {  font-family: "Open Sans", sans-serif;  height: 100vh;  background: url("http://www.anadolujet.com/images/skylife/1-2012/3019/110_3019kocaeli_08.jpg") 50% fixed;  background-size: cover;}
 @keyframes spinner {  0% {    transform: rotateZ(0deg);  }  100% {    transform: rotateZ(359deg);  }}
 * {  box-sizing: border-box;}
-.wrapper {  display: flex;  align-items: center;  flex-direction: column;  justify-content: center;  width: 100%;  min-height: 100%;  padding: 20px;  background: rgba(4, 40, 68, 0.85);}
+.wrapper {  display: flex;  align-items: center;  flex-direction: column;  justify-content: center;  width: 100%;  min-height: 100%;  padding: 20px;      background: rgb(207 207 207 / 85%);}
 .login {border-radius: 2px 2px 5px 5px;padding: 10px 20px 20px 20px;width: 90%;  max-width: 320px;  background: #ffffff;  position: relative;  padding-bottom: 80px;  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);}
 .login.loading button {  max-height: 100%;  padding-top: 50px;}
 .login.loading button .spinner {  opacity: 1;  top: 40%;}
