--- a/css/registro.css
+++ b/css/registro.css
@@ -2,20 +2,27 @@
     box-sizing: border-box;
   }
   body {
-    background: #fff;
-    color: white;
+    background-color: #e5e5f7;
+    background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e5f7 10px ), repeating-linear-gradient( #c4c3bf55, #c4c3bf );    color: white;
     font-family: sans-serif;
   }
-  
+
   form {
     width: 500px;
     margin: auto;
-    background: #ddd;
+    background: rgb(255, 255, 255);
     padding: 20px;
     margin-top: 20px;
     color: black;
-    border: 1px solid black;
+
+    border-radius: 2px 2px 5px 5px;
+
+    box-shadow: 0px 1px 5px rgb(0 0 0 / 30%);
   }
+
+
+  
+ 
   h1 {
     text-align: center;
     margin-bottom: 20px;
@@ -33,7 +40,7 @@
   input[type="submit"] {
     width: 30%;
     margin: auto;
-    background: #333;
+    background: #da2708;
     color: white;
     border: none;
     cursor: pointer;
