--- a/css/feed.css
+++ b/css/feed.css
@@ -1,16 +1,25 @@
 
+body {
+	font-family: "Open Sans", sans-serif;
+	height: 100vh;
+	background-color: #222222;
+    background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #0f0f0f 10px ), repeating-linear-gradient( #c4c3bf55, #181818 );   
+	 color: rgb(15, 15, 15);
+}
+
+
  hr {display:none}
 h4 {font-size: 19px;}
  small {font-size: 10px}
  a {color:rgb(248, 91, 43)}
  div {
-     display: flex;
-	background: #DADADA; 
-	border-bottom:14px solid #999;
+     text-align: center;
+    display: inline-block;
     flex-direction: row;
-    flex-flow: row;
-    flex-wrap: wrap;
+    /* flex-flow: row; */
+    width: 30%;
+    margin:20px;
 	}
 .video{
-   
+    
     }
