--- a/css/registro.css
+++ b/css/registro.css
@@ -12,7 +12,7 @@
   form {
     width: 500px;
     margin: auto;
-    background: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, 0.7);
     padding: 20px;
     margin-top: 20px;
     color: black;
@@ -44,7 +44,7 @@
     margin: auto;
     background: #ffd901;
     color: rgb(0, 0, 0);
-    border: none;
+    border: solid 2px rgb(0, 0, 0);
     cursor: pointer;
   }
   .error {
