--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 	padding: 10px 20px 20px 20px;
 	width: 90%;
 	max-width: 320px;
-	background: #ffffff;
+	background: rgba(0, 0, 0, 0.3);
 	position: relative;
 	padding-bottom: 80px;
 	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
