--- a/css/nav.css
+++ b/css/nav.css
@@ -6,7 +6,7 @@ body {
 .site-header {
   display: flex;
   align-items: center;
-  background: #0d1313;
+  background: #0d1313a3;
   color: white;
 }
 @media (max-width: 600px) {
