--- a/css/registro.css
+++ b/css/registro.css
@@ -42,6 +42,7 @@
   input[type="submit"] {
     width: 21%;
     margin: auto;
+    padding: 5px;
     background: #ffd901;
     color: rgb(0, 0, 0);
     border: solid 2px rgb(0, 0, 0);
